Regular update  * implemented poseur  * to add test cases  * to review README  * to make Homebrew formula  * to revise distribution Makefile

--- a/TODO
+++ b/TODO
@@ -1,3 +1,13 @@
+### July 15th, 2019
+
+- [ ] review README
+- [ ] make Homebrew formula
+- [ ] revise distribution Makefile
+
+### July 14th, 2019
+
+- [ ] implement unittests
+
 ### June 10th, 2019
 
-[x] initiate project
+- [x] initiate project
