New distribution [0.1.0.post1]
 * revised setup.py
 * fixed Homebrew formula

--- a/share/poseur.1
+++ b/share/poseur.1
@@ -1,6 +1,6 @@
 .\" Man page generated from reStructuredText.
 .
-.TH POSEUR 1 "July 20, 2019" "v0.1.0" ""
+.TH POSEUR 1 "July 21, 2019" "v0.1.0.post1" ""
 .SH NAME
 poseur \- back-port compiler for Python 3.8 positional-only parameter syntax
 .
