--- a/TODO
+++ b/TODO
@@ -1,8 +1,8 @@
 ### July 15th, 2019
 
 - [x] review README
-- [ ] make Homebrew formula
-- [ ] revise distribution Makefile
+- [x] make Homebrew formula
+- [x] revise distribution Makefile
 
 ### July 14th, 2019
 
