--- a/share/poseur.1
+++ b/share/poseur.1
@@ -1,6 +1,6 @@
 .\" Man page generated from reStructuredText.
 .
-.TH POSEUR 1 "July 21, 2019" "v0.1.0.post1" ""
+.TH POSEUR 1 "July 26, 2019" "v0.1.1" ""
 .SH NAME
 poseur \- back-port compiler for Python 3.8 positional-only parameter syntax
 .
@@ -66,7 +66,7 @@ run in quiet mode
 duplicate original files in case there\(aqs any issue
 .INDENT 0.0
 .TP
-.B \-n\fP,\fB  \-\-no\-archive
+.BI \-n\fB a\fP,\fB \ \-\-no\-archive
 do not archive original files
 .UNINDENT
 .INDENT 0.0
