--- a/share/poseur.1
+++ b/share/poseur.1
@@ -1,6 +1,6 @@
 .\" Man page generated from reStructuredText.
 .
-.TH POSEUR 1 "August 10, 2019" "v0.2.1" ""
+.TH POSEUR 1 "August 10, 2019" "v0.3.0" ""
 .SH NAME
 poseur \- back-port compiler for Python 3.8 positional-only parameter syntax
 .
@@ -96,6 +96,11 @@ dismiss runtime checks for positional\-only parameters
 .BI \-n\fB l\fP,\fB \ \-\-no\-linting
 do not lint converted codes
 .UNINDENT
+.INDENT 0.0
+.TP
+.B \-r \fIVAR\fP, \-\-decorator \fIVAR\fP
+name of decorator for runtime checks (${DECORATOR})
+.UNINDENT
 .SH ENVIRONMENT
 .sp
 \fBposeur\fP currently supports two environment variables.
@@ -118,6 +123,9 @@ dismiss runtime checks for positional\-only arguments
 .TP
 .B POSEUR_LINTING
 lint converted codes
+.TP
+.B POSEUR_DECORATOR
+name of decorator for runtime checks
 .UNINDENT
 .SH SEE ALSO
 .sp
