Fix LINESEP typos and incorrectly copied F2FORMAT

--- a/share/poseur.1
+++ b/share/poseur.1
@@ -115,7 +115,7 @@ encoding to open source files
 .B POSEUR_VERSION
 convert against Python version
 .TP
-.B POSEUR_LINSEP
+.B POSEUR_LINESEP
 line separator to process source files
 .TP
 .B POSEUR_DISMISS
