--- a/share/poseur.1
+++ b/share/poseur.1
@@ -1,6 +1,6 @@
 .\" Man page generated from reStructuredText.
 .
-.TH POSEUR 1 "November 09, 2019" "v0.4.0" ""
+.TH POSEUR 1 "November 25, 2019" "v0.4.1" ""
 .SH NAME
 poseur \- back-port compiler for Python 3.8 positional-only parameter syntax
 .
@@ -100,6 +100,9 @@ do not lint converted codes
 .TP
 .B \-r \fIVAR\fP, \-\-decorator \fIVAR\fP
 name of decorator for runtime checks (${DECORATOR})
+.TP
+.B \-t \fIINDENT\fP, \-\-tabsize \fIINDENT\fP
+indentation tab size
 .UNINDENT
 .SH ENVIRONMENT
 .sp
@@ -126,6 +129,9 @@ lint converted codes
 .TP
 .B POSEUR_DECORATOR
 name of decorator for runtime checks
+.TP
+.B POSEUR_TABSIZE
+indentation tab size
 .UNINDENT
 .SH SEE ALSO
 .sp
