--- a/share/poseur.1
+++ b/share/poseur.1
@@ -1,6 +1,6 @@
 .\" Man page generated from reStructuredText.
 .
-.TH POSEUR 1 "November 28, 2019" "v0.4.2.post1" ""
+.TH POSEUR 1 "December 11, 2019" "v0.4.3" ""
 .SH NAME
 poseur \- back-port compiler for Python 3.8 positional-only parameter syntax
 .
