--- a/share/poseur.1
+++ b/share/poseur.1
@@ -135,7 +135,7 @@ indentation tab size
 .UNINDENT
 .SH SEE ALSO
 .sp
-babel(1), f2format(1), walrus(1), vermin(1)
+pybpc(1), f2format(1), walrus(1), vermin(1)
 .SH AUTHOR
 Jarry Shaw, a newbie programmer, is the author, owner and maintainer
 of poseur. Please contact me at jarryshaw@icloud.com.
